[package]
name = "trustchain"
version = "0.1.0"
edition = "2021"
authors = ["Web3 Ecosystem Team"]
description = "TrustChain - Certificate Authority with Certificate Transparency and DNS resolution"
license = "MIT OR Apache-2.0"
repository = "https://github.com/web3-ecosystem/trustchain"
keywords = ["ca", "certificate", "transparency", "dns", "consensus"]

[dependencies]
# Core async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# STOQ transport integration (replaces direct QUIC)
stoq = { path = "../stoq", features = ["high-performance"] }
bytes = { workspace = true }

# Certificate and cryptography
x509-parser = { workspace = true }
der-parser = { workspace = true }
ring = { workspace = true }
ed25519-dalek = { workspace = true }
rsa = { workspace = true }
pem = { workspace = true }
der = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }

# Post-quantum cryptography
pqcrypto-falcon = { workspace = true }
pqcrypto-kyber = { workspace = true }
pqcrypto-traits = { workspace = true }
aes-gcm = { workspace = true }
falcon-rust = "0.1"  # Alternative FALCON implementation
serde_arrays = "0.1"  # For serializing fixed-size arrays

# HTTP client
# reqwest = ... # REMOVED: STOQ-only transport

# Compression
flate2 = { workspace = true }

# Web and API
# axum = ... # REMOVED: STOQ-only transport
# tower = ... # REMOVED: STOQ-only transport (HTTP middleware)
# tower-http = ... # REMOVED: STOQ-only transport
# hyper = ... # REMOVED: STOQ-only transport

# DNS
trust-dns-client = { workspace = true }
trust-dns-server = { workspace = true }
trust-dns-proto = { workspace = true }
hickory-client = { workspace = true }
hickory-proto = { workspace = true }

# Data structures and serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
bincode = { workspace = true }

# Consensus and blockchain
sha2 = { workspace = true }
blake3 = { workspace = true }
merkletree = { workspace = true }

# Storage and data management
dashmap = { workspace = true }
arc-swap = { workspace = true }
parking_lot = { workspace = true }
sqlx = { workspace = true }

# Error handling and logging
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Time and UUID
chrono = { workspace = true }
uuid = { workspace = true }
num_cpus = { workspace = true }
time = { version = "0.3", features = ["macros", "formatting"] }

# Configuration
config = { workspace = true }
clap = { workspace = true }

# IPv6 networking
socket2 = { workspace = true }

# Additional
hex = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }
tokio-test = { workspace = true }

[features]
default = ["ca", "ct", "dns", "consensus"]

# Core features
ca = []           # Certificate Authority
ct = []           # Certificate Transparency
dns = []          # DNS resolution
consensus = []    # Proof of State consensus integration

# Testing and development
localhost-testing = []
production-ready = ["consensus"]

[lib]
name = "trustchain"
path = "src/lib.rs"


[[bin]]
name = "trustchain-stoq-server"
path = "src/bin/trustchain-stoq-server.rs"

[[bin]]
name = "validate-deployment"
path = "src/bin/validate-deployment.rs"

# Profiles are managed at workspace level