[package]
name = "mfn-benchmarks"
version = "0.1.0"
edition = "2021"
authors = ["HyperMesh Team"]
description = "Comprehensive MFN performance benchmarking framework"

[dependencies]
# Core benchmarking
criterion = { version = "0.5", features = ["html_reports", "csv_output"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
async-trait = "0.1"

# Data structures and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
bincode = "1.3"

# Error handling and utilities
anyhow = "1.0"
thiserror = "1.0"
uuid = "1.0"
tempfile = "3.0"

# Metrics and monitoring

# Networking and IPC
socket2 = "0.5"
nix = "0.27"

# Math and statistics
statrs = "0.16"
plotters = "0.3"
ndarray = "0.15"

# Cryptography and hashing
blake3 = "1.5"
ahash = "0.8"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Neural networks and ML (for DSR layer)
candle-core = "0.4"
candle-nn = "0.4"

# System monitoring
sysinfo = "0.29"
procfs = "0.15"

# Time and concurrency
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
crossbeam = "0.8"

# Random data generation
rand = "0.8"
fastrand = "2.0"

# Command line interface for benchmark runner
clap = { version = "4.0", features = ["derive"] }

[[bench]]
name = "layer1_ifr"
harness = false

[[bench]]
name = "layer2_dsr" 
harness = false

[[bench]]
name = "layer3_alm"
harness = false

[[bench]]
name = "layer4_cpe"
harness = false

[[bench]]
name = "integration"
harness = false

[[bench]]
name = "memory_profile"
harness = false

[[bench]]
name = "regression"
harness = false

[[bin]]
name = "benchmark-runner"
path = "src/bin/benchmark-runner.rs"

[[bin]]
name = "baseline-generator"
path = "src/bin/baseline-generator.rs"

[[bin]]
name = "performance-dashboard"
path = "src/bin/performance-dashboard.rs"