[package]
name = "hypermesh-core"
version = "0.1.0"
edition = "2021"
authors = ["HyperMesh Team"]
description = "HyperMesh Core Infrastructure"

[lib]
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"
futures = "0.3"

# Networking
quinn = "0.10"
rustls = "0.21"
rustls-pemfile = "1.0"
rcgen = "0.11"
webpki-roots = "0.25"
socket2 = "0.5"
bytes = { version = "1.6", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cryptography
ring = "0.16"
sha2 = "0.10"
blake3 = "1.5"
hex = "0.4"
x509-parser = "0.16"

# Collections and concurrency
dashmap = "6.0"
arc-swap = "1.7"
parking_lot = "0.12"
crossbeam = "0.8"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Storage
rocksdb = "0.21"

# eBPF (optional)
aya = { version = "0.12", optional = true }
libbpf-sys = { version = "1.0", optional = true }

# Monitoring

# Testing
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"

[features]
default = []
ebpf = ["aya", "libbpf-sys"]
