[package]
name = "hypermesh-cli"
version = "0.1.0"
edition = "2021"
authors = ["HyperMesh Team"]
description = "HyperMesh Command Line Interface"


[lib]
path = "lib.rs"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"