[package]
name = "nexus-shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared utilities and types for Nexus core components"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
blake3.workspace = true
chrono.workspace = true
ring.workspace = true
parking_lot.workspace = true
toml.workspace = true

# Additional dependencies
hex = "0.4"
ed25519-dalek.workspace = true
rand.workspace = true

[features]
default = []