[package]
name = "stoq"
version = "0.1.0"
edition = "2021"
authors = ["HyperMesh Team"]
description = "Standalone STOQ Protocol - QUIC over IPv6 with CDN capabilities"
license = "MIT OR Apache-2.0"

[dependencies]
# Core async runtime
tokio = { version = "1.38", features = ["full"] }
async-trait = "0.1"

# QUIC implementation
quinn = "0.10"
rustls = "0.21"
rustls-pemfile = "1.0"
rustls-pki-types = "1.0"
rcgen = "0.11"

# Networking
socket2 = "0.5"
bytes = { version = "1.6", features = ["serde"] }

# Data structures
dashmap = "6.0"
arc-swap = "1.7"
crossbeam = "0.8"
parking_lot = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
bincode = "1.3"

# Time with serde support
chrono = { version = "0.4", features = ["serde"] }

# Hashing and crypto
sha2 = "0.10"
blake3 = "1.5"
ring = "0.16"
x509-parser = "0.16"

# Metrics and logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Chunking and compression
zstd = "0.13"
lz4 = "1.24"
# rolling-hash = "0.1"  # For content-defined chunking - using internal implementation

# Geographic and routing
# geoip2 = "0.1"  # Commented out - optional for MVP
# maxminddb = "0.24"  # Commented out - optional for MVP
petgraph = "0.6"
ndarray = "0.15"


# Configuration
config = "0.14"
clap = { version = "4.5", features = ["derive", "env"] }

# Optional ML for routing optimization (placeholder)
# candle = { version = "0.5", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
proptest = "1.4"
quickcheck = "1.0"
tempfile = "3.10"
# wireshark = "0.1"  # For packet analysis in tests - optional

[features]
default = ["cdn", "edge", "ml-routing"]
cdn = []
edge = []
ml-routing = []
benchmark = []

# Benchmarks will be added later
# [[bench]]
# name = "throughput"
# harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
inherits = "release"
debug = true