[package]
name = "hypermesh-assets"
version = "0.1.0"
edition = "2021"
authors = ["HyperMesh Team"]
description = "HyperMesh Asset Management System - Universal asset orchestration with consensus validation"
license = "MIT OR Apache-2.0"


[lib]
path = "lib.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.38", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Consensus integration
hypermesh-consensus = { path = "../consensus" }
hypermesh-transport = { path = "../transport" }

# Serialization and data structures
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
uuid = { version = "1.8", features = ["v4", "serde"] }

# Cryptography and security
ring = "0.16"
sha2 = "0.10"
blake3 = "1.5"
hex = "0.4"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Collections and concurrency
dashmap = "6.0"
arc-swap = "1.7"
parking_lot = "0.12"

# Random number generation
fastrand = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3.10"
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }

[[example]]
name = "consensus_proof_demo"
path = "examples/consensus_proof_demo.rs"

[[example]]
name = "simple_consensus_demo"
path = "examples/simple_consensus_demo.rs"

[[example]]
name = "cross_chain_validation_demo"
path = "examples/cross_chain_validation_demo.rs"

[[example]]
name = "proof_of_state_consensus_integration_demo"
path = "examples/proof_of_state_consensus_integration_demo.rs"

[features]
default = ["monitoring"]
monitoring = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"