[package]
name = "hypermesh-catalog"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true


[lib]
path = "lib.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
sha2 = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true }

# Additional dependencies for blockchain compute
rand = "0.8"

# Local dependencies
hypermesh-consensus = { path = "../consensus" }
hypermesh-transport = { path = "../transport" }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }